--- a/css/layout.css
+++ b/css/layout.css
@@ -24,4 +24,41 @@
 
 /* Positioning Classes */
 
+/* needed to add ids to everthing under featured brands because everything class is shadow */
 
+
+
+#SummerGrass {
+  float: left;
+  width: 62.666%;
+}
+
+#ShoeArchive {
+ overflow: hidden;
+ float: left;
+ width: 31.333%;
+}
+
+#LadyBugs {
+ float: left;
+ width: 31.333%;
+}
+
+#Skaters {
+ float: left;
+ width: 31.333%;
+}
+
+#BlueStar {
+ float: left;
+ width: 31.333%;
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    line-height: 0;
+}
